Copy GPU workaround flags from browser to GPU process

BUG=682912
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2644733005
Cr-Commit-Position: refs/heads/master@{#447356}

Former-commit-id: ded062d6c02a0cbfa89c90dae364c48f9118a328